# sndfile-tools

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  common.c  common.h  config.h.cmake  configure.ac  index.html  kaiser_window.c  kaiser_window.h  sndfile-faulkner-resample.c  sndfile-generate-chirp.c  sndfile-mix-to-mono.c  sndfile-spectrogram.c  window.c
.github/workflows/: action.yml
M4/: check_decl.m4
Scripts/: calc-hilbert-fir.m  cstyle.py  git-pre-commit-hook  localinstall.py
doc/: index.html
man/: sndfile-generate-chirp.1  sndfile-jackplay.1  sndfile-mix-to-mono.1  sndfile-resample.1  sndfile-spectrogram.1  sndfile-waveform.1
src/: beat-detect.c  common.c  common.h  generate-chirp.c  jackplay.c  kaiser_window_test.c  mix-to-mono.c  pitch-guess.c  pitch-infer.c  resample.c  sndfile-beat-detect.c  sndfile-faulkner-resample.c  sndfile-generate-chirp.c  sndfile-jackplay.c  sndfile-merge.c  sndfile-mix-files.c  sndfile-mix-to-mono.c  sndfile-normalize.c  sndfile-spectrogram.c  sndfile-top-and-tail.c  sndfile-truncate.c  sndfile-waveform.c  spectrogram.c  spectrum.c  spectrum.h  test_kaiser_window.c  waveform.c  window.c  window.h
tests/: common_tests.c  kaiser_window_test.c  test-wrapper.sh  valgrind-test.sh
